# notion-clone

./: Cargo.toml  LICENSE  README.md  dev.sh  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.devcontainer-extend.yml
backend/: .env  .env.dev  .env.test  Cargo.toml  Makefile  Makefile.toml
backend/docker/: docker-compose.yml
backend/docker/app/: Dockerfile
backend/docker/db/: Dockerfile
backend/migrations/: 20221108225920_setup.sql  20221108225920_slack.sql  20230305132144_notion.sql
backend/src/: main.rs
backend/src/apis/: common.rs  health_check.rs  macros.rs  mod.rs  page.rs
backend/src/apis/handlers/: graphql_handler.rs  mod.rs
backend/src/apis/notion/: page.rs
backend/src/apis/slack/: channel.rs  message.rs  mod.rs  thread.rs
backend/src/graphql/: channel.rs  error.rs  macros.rs  message.rs  mod.rs  thread.rs  utils.rs
backend/src/graphql/handlers/: graphql_handler.rs  graphql_playground.rs
backend/src/graphql/notion/: hello_world.rs  mod.rs  page.rs
backend/src/graphql/slack/: channel.rs  message.rs  thread.rs
backend/src/models/: channel.rs
backend/src/repositories/: error.rs  mod.rs
backend/src/repositories/interfaces/: channel.rs  message.rs  mod.rs  page.rs  thread.rs  workspace.rs
backend/src/repositories/interfaces/notion/: page.rs
backend/src/repositories/interfaces/slack/: channel.rs  message.rs  thread.rs
backend/src/repositories/postgres/: channel.rs  common.rs  macros.rs  message.rs  mod.rs  thread.rs  utils.rs
backend/src/repositories/postgres/notion/: page.rs
backend/src/repositories/postgres/notion/page/: mock.rs  mod.rs  tests.rs
backend/src/repositories/postgres/page/: mock.rs  mod.rs  tests.rs
backend/src/repositories/postgres/slack/: channel.rs  message.rs  thread.rs
backend/src/repositories/sqlx/: channel.rs  macros.rs  message.rs  mod.rs  thread.rs
backend/src/use_cases/: channel.rs  error.rs  message.rs  mod.rs  page.rs  thread.rs
backend/src/use_cases/notion/: page.rs
backend/src/use_cases/slack/: channel.rs  message.rs  thread.rs
docs/: apply_title_to_page_relationships.sql  apply_title_to_page_sibling_relationships.sql  sql-for-tree.md  use-case.md
(+204 files in other folders)
